tests/suite/snapshots/all__suite__incremental_build_test__modified_after_incrimental_build.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"modified\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Modified 0 files since last build
Syncing dependancies
