tests/suite/snapshots/all__suite__incremental_build_test__stale_after_strings_edit.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"stale\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  <ROOT>/src/Main.java
  <ROOT>/src/util/Strings.java
Stale 2 files to recompile
Syncing dependencies
